gitops/manifests/vllm-stack/vllm-stack.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vllm-stack
  namespace: vllm-stack
  labels:
    app: vllm-stack
    app.kubernetes.io/name: vllm-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vllm-stack
  template:
    metadata:
      labels:
        app: vllm-stack
        app.kubernetes.io/name: vllm-stack
    spec:
      containers:
      - name: nginx
        image: "docker-registry.pengiuns.com/vllm:cpu"
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources: 
          requests:
            memory: "5Gi"  
            cpu: "100m"      
          limits:
            memory: "10Gi"  
            cpu: "500m"    
        volumeMounts:
          - name: vllm-data
            mountPath: /data
      volumes:
        - name: vllm-data
          persistentVolumeClaim:
            claimName: pvc-vllm-stack

---
apiVersion: v1
kind: Service
metadata:
  name: vllm-stack
  namespace: vllm-stack
  labels:
    app.kubernetes.io/name: vllm-stack
spec:
  selector:
    app: vllm-stack
  ports:
  - name: http
    port: 80 # we talk to 80
    protocol: TCP
    targetPort: 8000 # app listens here
  # type: LoadBalancer # for debugging
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vllm-stack
  labels:
    app: vllm-stack
    app.kubernetes.io/name: vllm-stack
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "1000"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1000"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1000"
    nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: "1000"
spec:
  ingressClassName: nginx
  rules:
  - host:  vllm.${DOMAIN_NAME}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vllm-stack
            port:
              number: 80 # or 443
  tls:
  - hosts:
      -  vllm.${DOMAIN_NAME}
    secretName: letsencrypt-swisshikefinder-com
